src/tests/propInInitialState/invalid/case#6/index.jsx
function avatar(props) {
    const [user, setUser] = React.useState({...props.user})
    return <View>...</View>
}